Scenarios defined; camera & input improved.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <script src="./files/classes/Resident.js"></script>  
 
     <!-- ConfiguredMap: an improved Phaser Tilemap -->
-    <script src="./files/classes/ConfiguredMap.js"></script>   
+    <script src="./files/classes/meta/ConfiguredMap.js"></script>   
+
+    <!-- Scenario: game initialization -->
+    <script src="./files/classes/meta/Scenario.js"></script>  
 
     <!-- other parts of functionality -->
     <script src="./files/keyboard.js"></script>   
