Scenario system refined.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <!-- other parts of functionality -->
     <script src="./files/keyboard.js"></script>   
+    <script src="./files/functions.js"></script>
     
     <!-- the central stack -->
     <script src="./files/main.js"></script>
