Object select added (though buggy) + names generated for humans

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <script src="./files/optimization.js"></script>
 
     <!-- other parts of functionality -->
-    <script src="./files/keyboard.js"></script>   
+    <script src="./files/datasets.js"></script>    
     <script src="./files/functions.js"></script>
+    <script src="./files/keyboard.js"></script>   
+    
 
     <!-- 
         game object classes, in order of inheritance; see docs/objects.md
